fix issue where first few pixels of the first extension icon was visible when direclty following the url bar

--- a/userChrome.css
+++ b/userChrome.css
@@ -3,7 +3,7 @@
 }
 
 #urlbar-container {
-    min-width: 18em !important;
+    min-width: 18.2em !important;
 }
 
 #nav-bar {
